[gd_scene load_steps=21 format=3 uid="uid://dlysvvr1aprdc"]

[ext_resource type="Script" uid="uid://cxaj2txgrot0c" path="res://gui/game_hud/game_hud.gd" id="1_2v08g"]
[ext_resource type="PackedScene" uid="uid://b2i3hhft1o5tt" path="res://2D/resource_cards/resource_cards.tscn" id="2_svuxb"]
[ext_resource type="Resource" uid="uid://03f6o1ggd8di" path="res://custom/terrain_resources/brick_res.tres" id="3_0wm5q"]
[ext_resource type="Resource" uid="uid://brghdbk4jlcyo" path="res://custom/terrain_resources/ore_res.tres" id="4_5a7ot"]
[ext_resource type="Resource" uid="uid://clhpnv8ji1oud" path="res://custom/terrain_resources/sheep_res.tres" id="5_cohbh"]
[ext_resource type="Resource" uid="uid://dxj3v0c7du1px" path="res://custom/terrain_resources/wheat_res.tres" id="6_hhadb"]
[ext_resource type="PackedScene" uid="uid://c38lsr2lu1i4t" path="res://gui/game_hud/components/buy_button.tscn" id="7_iwlbn"]
[ext_resource type="Resource" uid="uid://cvo8kw33xdrta" path="res://custom/terrain_resources/wood_res.tres" id="7_vvj38"]
[ext_resource type="Texture2D" uid="uid://b0xh3lcnrqboa" path="res://common/icons/ui_buttons/structure_gate.png" id="8_en8hq"]
[ext_resource type="Texture2D" uid="uid://c1d8lhog071sm" path="res://common/icons/ui_buttons/card_lift.png" id="9_iwlbn"]
[ext_resource type="Texture2D" uid="uid://do5fpysxkbwj2" path="res://common/icons/ui_buttons/arrow_diagonal.png" id="10_t7dor"]
[ext_resource type="Texture2D" uid="uid://cu15plfdy0eo1" path="res://common/shapes/ring_20_256.png" id="11_en8hq"]
[ext_resource type="Texture2D" uid="uid://begn511dpycyv" path="res://common/icons/ui_buttons/hourglass.png" id="12_iwlbn"]
[ext_resource type="PackedScene" uid="uid://b17g86bbvfydc" path="res://gui/game_hud/components/roll_screen.tscn" id="13_ryev7"]
[ext_resource type="Script" uid="uid://b48afnuau5q10" path="res://gui/game_hud/state_machine/state_master.gd" id="13_t7dor"]
[ext_resource type="Script" uid="uid://dk3jt8p0fjgid" path="res://gui/game_hud/state_machine/inactive_state.gd" id="14_8trcm"]
[ext_resource type="Script" uid="uid://ca8wyyyfxe0ef" path="res://gui/game_hud/state_machine/need_roll_state.gd" id="15_hheuk"]
[ext_resource type="Script" uid="uid://c3rxa57l0dfcw" path="res://gui/game_hud/state_machine/active_state.gd" id="16_p1mox"]
[ext_resource type="Script" uid="uid://dnbu8tbbhv6e8" path="res://gui/game_hud/setup_state.gd" id="18_3o7oo"]
[ext_resource type="Script" uid="uid://by0qk8rv8l4ul" path="res://gui/game_hud/state_machine/rober_move_state.gd" id="19_qo7ve"]

[node name="GameHUD" type="Control" node_paths=PackedStringArray("turn_progress_bar", "roll_button", "end_turn_button", "player_card_parent")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2v08g")
turn_progress_bar = NodePath("TurnProgress")
roll_button = NodePath("RollButton")
end_turn_button = NodePath("EndTurnButton")
player_card_parent = NodePath("PlayerCards")

[node name="PlayerCards" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
grow_horizontal = 2
alignment = 1

[node name="Resources" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.01
anchor_top = 0.5
anchor_right = 0.01
anchor_bottom = 0.5
grow_vertical = 2

[node name="Brick" parent="Resources" instance=ExtResource("2_svuxb")]
position = Vector2(0, -160)
type = ExtResource("3_0wm5q")

[node name="Ore" parent="Resources" instance=ExtResource("2_svuxb")]
position = Vector2(0, -90)
type = ExtResource("4_5a7ot")

[node name="Sheep" parent="Resources" instance=ExtResource("2_svuxb")]
position = Vector2(0, -20)
type = ExtResource("5_cohbh")

[node name="Wheat" parent="Resources" instance=ExtResource("2_svuxb")]
position = Vector2(0, 50)
type = ExtResource("6_hhadb")

[node name="Wood" parent="Resources" instance=ExtResource("2_svuxb")]
position = Vector2(0, 120)
type = ExtResource("7_vvj38")

[node name="BuyButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.98
anchor_right = 0.02
anchor_bottom = 0.98
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="BuySettlement" parent="BuyButtons" instance=ExtResource("7_iwlbn")]
layout_mode = 2
type = "Settlement"

[node name="BuyCastle" parent="BuyButtons" instance=ExtResource("7_iwlbn")]
layout_mode = 2
icon = ExtResource("8_en8hq")
type = "Castle"

[node name="BuyRoad" parent="BuyButtons" instance=ExtResource("7_iwlbn")]
layout_mode = 2
icon = ExtResource("10_t7dor")
type = "Road"

[node name="BuyCard" parent="BuyButtons" instance=ExtResource("7_iwlbn")]
layout_mode = 2
icon = ExtResource("9_iwlbn")
type = "Card"

[node name="RollButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.99
anchor_right = 0.5
anchor_bottom = 0.99
offset_left = -41.5
offset_top = -50.0
offset_right = 41.5
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme_override_font_sizes/font_size = 30
disabled = true
text = "ROLL"

[node name="EndTurnButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -87.0
offset_top = -83.0
offset_right = -15.0
offset_bottom = -11.0
grow_horizontal = 0
grow_vertical = 0
icon = ExtResource("12_iwlbn")
icon_alignment = 1

[node name="TurnProgress" type="TextureProgressBar" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -123.0
offset_top = -123.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 0
max_value = 60.0
step = 0.01
value = 60.0
fill_mode = 5
nine_patch_stretch = true
texture_under = ExtResource("11_en8hq")
texture_progress = ExtResource("11_en8hq")
tint_under = Color(1, 1, 1, 0.427451)
tint_progress = Color(0, 1, 0, 1)

[node name="RollScreen" parent="." instance=ExtResource("13_ryev7")]
layout_mode = 1

[node name="StateMaster" type="Node" parent="." node_paths=PackedStringArray("base")]
script = ExtResource("13_t7dor")
base = NodePath("..")
metadata/_custom_type_script = "uid://dd2nneu3quv1y"

[node name="InactiveState" type="Node" parent="StateMaster"]
script = ExtResource("14_8trcm")

[node name="NeedRollState" type="Node" parent="StateMaster" node_paths=PackedStringArray("roll_screen")]
script = ExtResource("15_hheuk")
roll_screen = NodePath("../../RollScreen")
roll_color = Color(1, 0.72549, 0, 1)
turn_color = Color(8.56727e-06, 0.805724, 3.85046e-07, 1)
metadata/_custom_type_script = "uid://b4n8p8i631us2"

[node name="ActiveState" type="Node" parent="StateMaster"]
script = ExtResource("16_p1mox")
metadata/_custom_type_script = "uid://b4n8p8i631us2"

[node name="SetupState" type="Node" parent="StateMaster"]
script = ExtResource("18_3o7oo")

[node name="RobberMoveState" type="Node" parent="StateMaster"]
script = ExtResource("19_qo7ve")
metadata/_custom_type_script = "uid://b4n8p8i631us2"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="RollButton" to="StateMaster/NeedRollState" method="_on_roll_button_pressed"]
[connection signal="pressed" from="EndTurnButton" to="." method="_on_end_turn_button_pressed"]

[editable path="BuyButtons/BuySettlement"]
[editable path="BuyButtons/BuyCastle"]
[editable path="BuyButtons/BuyRoad"]
[editable path="BuyButtons/BuyCard"]
